--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+
+    <!-- Adding Bootstrap -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -9,6 +12,30 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Adding Google Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Adding Font Awesome -->
+
+    <script
+      src="https://kit.fontawesome.com/83b5f0612b.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--  -->
+
     <title>TinDog</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -17,15 +44,64 @@
     <section id="title">
       <!-- Nav Bar -->
 
-      <!-- Title -->
+      <div class="container-fluid first-container">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#title">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/8744/8744142.png"
+                alt="dog-logo-img"
+                width="30"
+              />
+              tindog
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#toggler"
+              aria-controls="toggler"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggler">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-      <div>
-        <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
-      <div>
-        <img src="images/iphone6.png" alt="iphone-mockup" />
+        <!-- Title -->
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <h1>Meet new and interesting dogs nearby.</h1>
+              <button type="button" class="btn btn-light btn-lg">
+                <i class="fa-brands fa-apple"></i>
+                Download
+              </button>
+              <button type="button" class="btn btn-outline-light btn-lg">
+                <i class="fa-brands fa-google-play"></i>
+                Download
+              </button>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/iphone6.png" alt="iphone-mockup" />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -107,12 +183,11 @@
 
     <footer id="footer">
       <p>© Copyright TinDog</p>
+      <a
+        href="https://www.flaticon.com/br/icones-gratis/doge"
+        title="doge ícones"
+        >Doge ícones criados por Bruno Icons - Flaticon</a
+      >
     </footer>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
