--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
           <div class="row">
             <div class="col-lg-6">
               <h1>Meet new and interesting dogs nearby.</h1>
-              <button type="button" class="btn btn-light btn-lg">
+            <button type="button" class="btn btn-light btn-lg download-btn">
                 <i class="fa-brands fa-apple"></i>
                 Download
               </button>
-              <button type="button" class="btn btn-outline-light btn-lg">
+            <button type="button" class="btn btn-outline-light btn-lg download-btn">
                 <i class="fa-brands fa-google-play"></i>
                 Download
               </button>
             </div>
             <div class="col-lg-6">
-              <img src="images/iphone6.png" alt="iphone-mockup" />
+            <img src="images/iphone6.png" alt="iphone-mockup" class="title-img" />
             </div>
           </div>
         </div>
