--- a/index.html
+++ b/index.html
@@ -106,14 +106,30 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
 
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
+    <div class="container">
+      <div class="row">
 
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg feature">
+          <i class="features-img fa-solid fa-circle-check"></i>
+          <h3 class="features-title">Easy to use</h3>
+          <p class="p-features">So easy to use, even your dog could do it.</p>
+        </div>
+
+        <div class="col-lg feature">
+          <i class="features-img fa-solid fa-bullseye"></i>
+          <h3 class="features-title">Elite Clientele</h3>
+          <p class="p-features">We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="col-lg feature">
+          <i class="features-img fa-solid fa-heart"></i>
+          <h3 class="features-title">Guaranteed to work</h3>
+          <p class="p-features">Find the love of your dog's life or your money back.</p>
+        </div>
+
+      </div>
+
     </section>
 
     <!-- Testimonials -->
