--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
+<head>
+  <meta charset="utf-8" />
 
-    <!-- Adding Bootstrap -->
+  <!-- Adding Bootstrap -->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,45 +14,45 @@
     />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
 
-    <!-- Adding Google Fonts -->
+  <!-- Adding Google Fonts -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
     rel="stylesheet">
 
-    <!-- Adding Font Awesome -->
+  <!-- Adding Font Awesome -->
 
     <script
       src="https://kit.fontawesome.com/83b5f0612b.js"
       crossorigin="anonymous"
     ></script>
 
-    <!--  -->
+  <!--  -->
 
-    <title>TinDog</title>
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
+  <title>TinDog</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
 
-  <body>
-    <section id="title">
-      <!-- Nav Bar -->
+<body>
+  <section id="title">
+    <!-- Nav Bar -->
 
-      <div class="container-fluid first-container">
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#title">
+    <div class="container-fluid first-container">
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#title">
               <img
                 src="https://cdn-icons-png.flaticon.com/512/8744/8744142.png"
                 alt="dog-logo-img"
                 width="30"
               />
-              tindog
-            </a>
+            tindog
+          </a>
             <button
               class="navbar-toggler"
               type="button"
@@ -62,50 +62,50 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="toggler">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-              </ul>
-            </div>
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="toggler">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
 
-        <!-- Title -->
+      <!-- Title -->
 
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1>Meet new and interesting dogs nearby.</h1>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-light btn-lg download-btn">
-                <i class="fa-brands fa-apple"></i>
-                Download
-              </button>
+              <i class="fa-brands fa-apple"></i>
+              Download
+            </button>
             <button type="button" class="btn btn-outline-light btn-lg download-btn">
-                <i class="fa-brands fa-google-play"></i>
-                Download
-              </button>
-            </div>
-            <div class="col-lg-6">
+              <i class="fa-brands fa-google-play"></i>
+              Download
+            </button>
+          </div>
+          <div class="col-lg-6">
             <img src="images/iphone6.png" alt="iphone-mockup" class="title-img" />
-            </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Features -->
+  <!-- Features -->
 
-    <section id="features">
+  <section id="features">
 
     <div class="container">
       <div class="row">
@@ -130,78 +130,94 @@
 
       </div>
 
-    </section>
+  </section>
 
-    <!-- Testimonials -->
+  <!-- Testimonials -->
 
-    <section id="testimonials">
-      <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
-      </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
-      <em>Pebbles, New York</em>
+  <section id="testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <h2 class="h2-testimonials">
+            I no longer have to sniff other dogs for love. I've found the hottest
+            Corgi on TinDog. Woof.
+          </h2>
+        </div>
+        <div class="col-lg-3">
+          <div class="row">
+            <div class="col-12">
+              <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile" />
+            </div>
+            <div class="col">
+              <em>Pebbles, New York</em>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+    </div>
+
+    <!-- <h2 class="h2-testimonials">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+    <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
-    </section>
+  </section>
 
-    <!-- Press -->
+  <!-- Press -->
 
-    <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
-    </section>
+  <section id="press">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
+  </section>
 
-    <!-- Pricing -->
+  <!-- Pricing -->
 
-    <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+  <section id="pricing">
+    <h2>A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
 
-      <h3>Chihuahua</h3>
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+    <h3>Chihuahua</h3>
+    <h2>Free</h2>
+    <p>5 Matches Per Day</p>
+    <p>10 Messages Per Day</p>
+    <p>Unlimited App Usage</p>
+    <button type="button">Sign Up</button>
 
-      <h3>Labrador</h3>
-      <h2>$49 / mo</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+    <h3>Labrador</h3>
+    <h2>$49 / mo</h2>
+    <p>Unlimited Matches</p>
+    <p>Unlimited Messages</p>
+    <p>Unlimited App Usage</p>
+    <button type="button">Sign Up</button>
 
-      <h3>Mastiff</h3>
-      <h2>$99 / mo</h2>
-      <p>Pirority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-    </section>
+    <h3>Mastiff</h3>
+    <h2>$99 / mo</h2>
+    <p>Pirority Listing</p>
+    <p>Unlimited Matches</p>
+    <p>Unlimited Messages</p>
+    <p>Unlimited App Usage</p>
+    <button type="button">Sign Up</button>
+  </section>
 
-    <!-- Call to Action -->
+  <!-- Call to Action -->
 
-    <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </section>
+  <section id="cta">
+    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button">Download</button>
+    <button type="button">Download</button>
+  </section>
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <footer id="footer">
-      <p>© Copyright TinDog</p>
+  <footer id="footer">
+    <p>© Copyright TinDog</p>
       <a
         href="https://www.flaticon.com/br/icones-gratis/doge"
         title="doge ícones"
         >Doge ícones criados por Bruno Icons - Flaticon</a
       >
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
