--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <title>TinDog</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/8744/8744142.png">
 </head>
 
 <body>
