--- a/index.html
+++ b/index.html
@@ -134,33 +134,61 @@
   </section>
 
   <!-- Testimonials -->
-
+  
   <section id="testimonials">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8">
-          <h2 class="h2-testimonials">
-            I no longer have to sniff other dogs for love. I've found the hottest
-            Corgi on TinDog. Woof.
-          </h2>
-        </div>
-        <div class="col-lg-3">
+    <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
           <div class="row">
-            <div class="col-12">
-              <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile" />
+            <div class="col-lg-8">
+              <h2 class="h2-testimonials">
+                I no longer have to sniff other dogs for love. I've found the hottest
+                Corgi on TinDog. Woof.
+              </h2>
             </div>
-            <div class="col">
-              <em>Pebbles, New York</em>
+            <div class="col-lg-3">
+              <div class="row">
+                <div class="col-12">
+                  <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile" />
+                </div>
+                <div class="col">
+                  <em>Pebbles, New York</em>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-lg-8">
+              <h2 class="h2-testimonials">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            </div>
+            <div class="col-lg-3">
+              <div class="row">
+                 <div class="col-12">
+                  <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+                </div>
+                <div class="col">
+                  <em>Beverly, Illinois</em>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    
     </div>
 
-    <!-- <h2 class="h2-testimonials">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
   </section>
 
   <!-- Press -->
