--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Testimonials -->
   
   <section id="testimonials">
-    <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="testimonials-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row">
@@ -162,7 +162,8 @@
         <div class="carousel-item">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="h2-testimonials">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+              <h2 class="h2-testimonials">My dog used to be so lonely, but with TinDog's help, they've found the love of
+                their life. I think.</h2>
             </div>
             <div class="col-lg-3">
               <div class="row">
