Add card section

--- a/index.html
+++ b/index.html
@@ -207,27 +207,58 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-    <h3>Chihuahua</h3>
+
+    <div class="container-fluid card-container">
+      <div class="row">
+        <div class="col-lg col-cards">  
+          <div class="card">
+            <div class="card-body">
+              <h4>Chihuahua</h4>
     <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+              <ul class="list-group list-group-flush card-list">
+                <li class="list-group-item">5 Matches Per Day</li>
+                <li class="list-group-item">10 Messages Per Day</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-primary btn-card">Sign Up for Free</button>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg col-cards">
+          <div class="card">
+            <div class="card-body">
+              <h4>Labrador</h4>
+              <h2>$49 <small class="text-muted"> / mo</small></h2>
+              <ul class="list-group list-group-flush card-list">
+                <li class="list-group-item">Unlimited Matches</li>
+                <li class="list-group-item">Unlimited Messages</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-primary btn-card">Sign Up</button>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg col-cards">
+          <div class="card">
+            <div class="card-body">
+              <h4>Mastiff</h4>
+              <h2>$99 <small class="text-muted">/ mo</small></h2>
+            <ul class="list-group list-group-flush card-list">
+              <li class="list-group-item">Pirority Listing</li>
+              <li class="list-group-item">Unlimited Matches</li>
+              <li class="list-group-item">Unlimited Messages</li>
+              <li class="list-group-item">Unlimited App Usage</li>
+            </ul>
+              <button type="button" class="btn btn-primary btn-card">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
   </section>
 
   <!-- Call to Action -->
