--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
 
   <!-- Adding Bootstrap -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+    crossorigin="anonymous"></script>
 
   <!-- Adding Google Fonts -->
 
@@ -27,10 +22,7 @@
 
   <!-- Adding Font Awesome -->
 
-    <script
-      src="https://kit.fontawesome.com/83b5f0612b.js"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://kit.fontawesome.com/83b5f0612b.js" crossorigin="anonymous"></script>
 
   <!--  -->
 
@@ -47,34 +39,23 @@
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#title">
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/8744/8744142.png"
-                alt="dog-logo-img"
-                width="30"
-              />
+            <img src="https://cdn-icons-png.flaticon.com/512/8744/8744142.png" alt="dog-logo-img" width="30" />
             tindog
           </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#toggler"
-              aria-controls="toggler"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggler"
+            aria-controls="toggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="toggler">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="#title">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
             </ul>
           </div>
@@ -134,7 +115,7 @@
   </section>
 
   <!-- Testimonials -->
-  
+
   <section id="testimonials">
     <div id="testimonials-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -158,7 +139,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="carousel-item">
           <div class="row">
             <div class="col-lg-8">
@@ -167,7 +148,7 @@
             </div>
             <div class="col-lg-3">
               <div class="row">
-                 <div class="col-12">
+                <div class="col-12">
                   <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
                 </div>
                 <div class="col">
@@ -187,7 +168,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    
+
     </div>
 
   </section>
@@ -214,7 +195,7 @@
           <div class="card">
             <div class="card-body">
               <h4>Chihuahua</h4>
-    <h2>Free</h2>
+              <h2>Free</h2>
               <ul class="list-group list-group-flush card-list">
                 <li class="list-group-item">5 Matches Per Day</li>
                 <li class="list-group-item">10 Messages Per Day</li>
@@ -265,19 +246,26 @@
 
   <section id="cta">
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-light btn-lg download-btn">
+      <i class="fa-brands fa-apple"></i>
+      Download
+    </button>
+    <button type="button" class="btn btn-outline-light btn-lg download-btn">
+      <i class="fa-brands fa-google-play"></i>
+      Download
+    </button>
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
+    <a class="media-link" href="https://twitter.com/"><i class="fa-brands fa-square-twitter media-icon"></i></a>
+    <a class="media-link" href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook media-icon"></i></a>
+    <a class="media-link" href="https://www.instagram.com/"><i class="fa-brands fa-instagram media-icon"></i></a>
+    <a class="media-link" href="mailto:name@email.com"><i class="fa-solid fa-envelope media-icon"></i></a>
     <p>© Copyright TinDog</p>
-      <a
-        href="https://www.flaticon.com/br/icones-gratis/doge"
-        title="doge ícones"
-        >Doge ícones criados por Bruno Icons - Flaticon</a
-      >
+    <a href="https://www.flaticon.com/br/icones-gratis/doge" title="doge ícones">Doge ícones criados por Bruno Icons -
+      Flaticon</a>
   </footer>
 </body>
 
