--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
 
   <!-- Adding Google Fonts -->
 
@@ -191,7 +188,7 @@
 
     <div class="container-fluid card-container">
       <div class="row">
-        <div class="col-lg col-cards">  
+        <div class="col-lg col-cards">
           <div class="card">
             <div class="card-body">
               <h4>Chihuahua</h4>
@@ -205,7 +202,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg col-cards">
           <div class="card">
             <div class="card-body">
@@ -220,18 +217,18 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg col-cards">
           <div class="card">
             <div class="card-body">
               <h4>Mastiff</h4>
               <h2>$99 <small class="text-muted">/ mo</small></h2>
-            <ul class="list-group list-group-flush card-list">
-              <li class="list-group-item">Pirority Listing</li>
-              <li class="list-group-item">Unlimited Matches</li>
-              <li class="list-group-item">Unlimited Messages</li>
-              <li class="list-group-item">Unlimited App Usage</li>
-            </ul>
+              <ul class="list-group list-group-flush card-list">
+                <li class="list-group-item">Pirority Listing</li>
+                <li class="list-group-item">Unlimited Matches</li>
+                <li class="list-group-item">Unlimited Messages</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
               <button type="button" class="btn btn-primary btn-card">Sign Up</button>
             </div>
           </div>
@@ -267,6 +264,14 @@
     <a href="https://www.flaticon.com/br/icones-gratis/doge" title="doge ícones">Doge ícones criados por Bruno Icons -
       Flaticon</a>
   </footer>
+
+  <!-- Adding Booststrap -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <!--  -->
+
 </body>
 
 </html>
